feat(transcol-online): altera configurações de confiabilidade

--- a/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
+++ b/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
@@ -28,25 +28,25 @@
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'green'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Localização transmitida <strong>há menos de 7 min.</strong></div>
+            <div class="map-labels__description">Localização transmitida <strong>há menos de 5 min.</strong></div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'orange'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Localização transmitida <strong>há menos de 22 min.</strong></div>
+            <div class="map-labels__description">Localização transmitida <strong>há menos de 16 min.</strong></div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'red'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Localização transmitida <strong>há mais de 22 min.</strong></div>
+            <div class="map-labels__description">Localização transmitida <strong>há mais de 16 min.</strong></div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'gray'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Viagem não foi iniciada.</div>
+            <div class="map-labels__description">Viagem não iniciada ou veículo não monitorado.</div>
             <div>
             </div>
         </div>
