feat(transcol-online): esconde paginação de favoritos quando houver só 1 página

--- a/src/app/ceturb/transcol-online/favorites-slider/favorites-slider.component.html
+++ b/src/app/ceturb/transcol-online/favorites-slider/favorites-slider.component.html
@@ -1,5 +1,5 @@
 <ion-content class="favorites-slider" scroll="false">
-    <ion-slides slider="data.slider">
+    <ion-slides slider="data.slider" ng-class="{'onePage': $ctrl.favorites.length < 2 } ">
         <ion-slide-page ng-repeat="favorites in $ctrl.favorites">
             <div class="favorites-bar">
                 <div ng-repeat="favorite in favorites">
