feat(transcol-online): adiciona loading para carregamento inicial de stops

--- a/src/app/ceturb/transcol-online/transcol-online.component.html
+++ b/src/app/ceturb/transcol-online/transcol-online.component.html
@@ -11,7 +11,7 @@
         <beta-ribbon></beta-ribbon>
 
         <map-labels ng-class="{'show-labels': vm.showLabels }"></map-labels>
-        <spinner ng-if="vm.isDetailsOpenned && uiState.loading"></spinner>
+        <spinner ng-if="( vm.isDetailsOpenned || !vm.allStops ) && uiState.loading"></spinner>
         
         <favorites-slider 
             ng-if="vm.favorites.length"
