--- a/src/app/ceturb/transcol-online/beta-ribbon/beta-ribbon.component.scss
+++ b/src/app/ceturb/transcol-online/beta-ribbon/beta-ribbon.component.scss
@@ -1,3 +1,8 @@
+.keyboard-openned .transcol-online .ribbon-box{
+	display: none;
+}
+
+
 .ribbon-box {
   width: 200px; height: 300px;
   position: relative;
