--- a/src/app/ceturb/transcol-online/favorites-slider/favorites-slider.component.scss
+++ b/src/app/ceturb/transcol-online/favorites-slider/favorites-slider.component.scss
@@ -1,3 +1,7 @@
+.keyboard-openned .transcol-online .favorites-slider {
+	display: none;
+}
+
 .favorites-slider {
 		height: 105px !important;
 		bottom: 0;
@@ -29,7 +33,7 @@
 			visibility: hidden;
 		}
 
-        .keyboard-open &,
+        .keyboard-openned &,
 		.closed & .swiper-container-horizontal > .swiper-pagination{
 			display: none;
 		}
