feat(transcol-online): feedback inicial

--- a/src/app/ceturb/transcol-online/transcol-online.component.html
+++ b/src/app/ceturb/transcol-online/transcol-online.component.html
@@ -1,6 +1,10 @@
 <ion-view>
     <ion-nav-title>Transcol Online</ion-nav-title>
     <ion-nav-buttons side="right">
+        <md-button class="md-icon-button" ng-click="vm.goToFeedback()">
+            <md-icon md-font-icon="fa fa-commenting-o">
+            </md-icon>
+        </md-button>
         <md-button class="md-icon-button" ng-click="vm.showLabels = !vm.showLabels">
             <md-icon md-font-icon="fa fa-question">
             </md-icon>
