chore(transcol-online): corrige texto dos labels

--- a/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
+++ b/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
@@ -23,30 +23,30 @@
         </div>
     </div>
     <div style="margin-top:20px;">
-        <div class="map-labels__title"><i class="fa fa-question" aria-hidden="true"></i> Previsões</div>
+        <div class="map-labels__title"><i class="fa fa-question" aria-hidden="true"></i> Qualidade das previsões</div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'green'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Localização transmitida <strong>há menos de 5 min.</strong></div>
+            <div class="map-labels__description">Última localização enviada <strong>há menos de 5 min.</strong></div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'orange'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Localização transmitida <strong>há menos de 16 min.</strong></div>
+            <div class="map-labels__description">Última localização enviada <strong>entre 5 e 16 min.</strong></div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'red'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Localização transmitida <strong>há mais de 16 min.</strong></div>
+            <div class="map-labels__description">Última localização enviada <strong>há mais de 16 min.</strong></div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'gray'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Viagem não iniciada ou veículo não monitorado.</div>
+            <div class="map-labels__description">Veículo não monitorado ou viagem não iniciada.</div>
             <div>
             </div>
         </div>
