fix(transcol-online): corrige margens e bordas no feedback

--- a/src/app/ceturb/transcol-online/feedback/feedback.component.html
+++ b/src/app/ceturb/transcol-online/feedback/feedback.component.html
@@ -81,7 +81,7 @@
 						<i ng-class="{ rotate: vm.activePanel === 4 }" class="fa fa-chevron-right" aria-hidden="true"></i>
 					</div>
 				</div>
-				<div class="panel" ng-show="vm.activePanel === 4">
+				<div class="panel last-panel" ng-show="vm.activePanel === 4">
 					<md-divider></md-divider>
 					<feedback-form show-text="true"></feedback-form>
 				</div>
