--- a/src/app/ceturb/transcol-online/stop-icon/stop-icon.component.html
+++ b/src/app/ceturb/transcol-online/stop-icon/stop-icon.component.html
@@ -5,7 +5,7 @@
     <div>
         <span class="stop-icon__origin">Origem</span>
         <span class="stop-icon__destination">Destino</span>
-        <h4 ng-if="!$ctrl.stop.isTerminal" class="stop-icon__identifier">
+        <h4 class="stop-icon__identifier">
             {{$ctrl.stop.identificador}}
         </h4>
     </div>
