fix(transcol-online): corrige descrição dos favoritos

--- a/src/app/ceturb/transcol-online/favorites-slider/favorites-slider.component.html
+++ b/src/app/ceturb/transcol-online/favorites-slider/favorites-slider.component.html
@@ -9,7 +9,7 @@
                         <i ng-if="favorite.type==='trabalho'" class="fa fa-briefcase"></i>
                         <i ng-if="favorite.type==='outros'" class="fa fa-star"></i>
                     </md-button>
-                    <div class="favorites-bar__label">{{favorite.stop.descricao}}</div>
+                    <div class="favorites-bar__label">{{favorite.stop.logradouro}}</div>
                 </div>
             </div>
         </ion-slide-page>
