--- a/src/app/ceturb/transcol-online/transcol-online.component.scss
+++ b/src/app/ceturb/transcol-online/transcol-online.component.scss
@@ -169,9 +169,7 @@
 
 	$bottomSheetHeight: 100vh;
 
-	destination-list,
 	prevision-list { visibility: hidden; }
-	destination-list.shown,
 	prevision-list.shown,
 	.auto-complete-panel > * { visibility: visible !important; }
 
@@ -223,23 +221,20 @@
 		-moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
 		-o-transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); 
 		transition: all 300ms cubic-bezier(0.420, 0.000, 0.000, 0.990); /* custom */
-		width: calc(100vw * 4);
-	}
-
-	.stop-info__content.destines{
-		transform: translate3d(0, 0, 0)
+		width: calc(100vw * 3); /* IMPORTANTE: Atualiza se mudar o numero de views edntro da aba que sobe quando uma origem está selecionada*/
 	}
 
 	.stop-info__content.previsionsByOrigin{
-		transform: translate3d(-100vw, 0, 0)
+		// transform: translate3d(-100vw, 0, 0)
+		transform: translate3d(0, 0, 0)
 	}
 
 	.stop-info__content.previsionsByLine{
-		transform: translate3d(-200vw, 0, 0)
+		transform: translate3d(-100vw, 0, 0)
 	}
 
 	.stop-info__content.previsionsByRoute{
-		transform: translate3d(-300vw, 0, 0)
+		transform: translate3d(-200vw, 0, 0)
 	}
 
 	.stop-info__content > * {
@@ -330,9 +325,8 @@
 
 
 	.stop-info__btn-routes{ right: 0% }
-	.stop-info__btn-destination{ right: 20% }
 	.stop-info__btn-favorite{ 
-		right: 40%;
+		right: 20%;
 
 		&.is-favorite {
 			color: rgb(255, 193, 7) !important;
@@ -351,22 +345,14 @@
 		}
 	}
 	@media screen and (min-width : 320px) {
-		.stop-info__btn-destination{ right: 18% }
-		.stop-info__btn-favorite{ right: 36% }
+		.stop-info__btn-favorite{ right: 18% }
 	}
 
-	// @media screen and (min-width : 375px) {
-	// 	.stop-info__btn-destination{ right: 17% }
-	// 	.stop-info__btn-favorite{ right: 34% }
-	// }
-
 	@media screen and (min-width : 768px) {
-		.stop-info__btn-destination{ right: 8% }
-		.stop-info__btn-favorite{ right: 16% }
+		.stop-info__btn-destination{ right: 16% }
 	}
 
 	@media screen and (min-width : 1024px) {
-		.stop-info__btn-destination{ right: 6% }
-		.stop-info__btn-favorite{ right: 12% }
+		.stop-info__btn-destination{ right: 12% }
 	}
 }
