refactor(transcol-online): troca o campo "descricaoLinha" por "observacaoLinha" no componente de pre

--- a/src/app/ceturb/transcol-online/origin-previsions-list/origin-previsions-list.component.html
+++ b/src/app/ceturb/transcol-online/origin-previsions-list/origin-previsions-list.component.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="column prevision-list__descricao">
                         <h5 class="prevision-list__bandeira">{{ prevision.bandeira }} </h5>
-                        <p class="prevision-list__detalhe">{{ prevision.descricaoLinha }}</p>
+                        <p class="prevision-list__detalhe">{{ prevision.observacaoLinha }}</p>
                     </div>
                     <div class="column prevision-list__previsao" ng-style="{'color': prevision.confiabilidade}">
                         <i> {{ prevision.previsaoNaOrigem }}</i>
