fix(transcol-online): corrige posicionamento do teclado no feedback

--- a/src/app/ceturb/transcol-online/feedback/feedback.component.html
+++ b/src/app/ceturb/transcol-online/feedback/feedback.component.html
@@ -87,6 +87,7 @@
 				</div>
 			</div>
 		</div>
+		<div class="fix-bottom-keyboard"></div>
 		<error-message error="uiState.error"></error-message>
 	</ion-content>
 </ion-view>
