--- a/src/app/sep/sep-consulta.component.scss
+++ b/src/app/sep/sep-consulta.component.scss
@@ -77,7 +77,7 @@
     left: 2%;
 }
 
-body.keyboard-openned .favorite-process-container {
+body.platform-ios.keyboard-openned .favorite-process-container {
     max-height: 50%;
 }
 
