chore(transcolonline): Atualiza descrição das previsões

--- a/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
+++ b/src/app/ceturb/transcol-online/map-labels/map-labels.component.html
@@ -28,25 +28,25 @@
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'green'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Última localização enviada <strong>há menos de 5 min.</strong></div>
+            <div class="map-labels__description">Boa</div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'orange'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Última localização enviada <strong>entre 5 e 16 min.</strong></div>
+            <div class="map-labels__description">Média</div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'red'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Última localização enviada <strong>há mais de 16 min.</strong></div>
+            <div class="map-labels__description">Baixa</div>
         </div>
         <div>
             <div class="map-labels__icon  route-previsions__reliability" ng-style="{'color': 'gray'}">
                 <i class="fa fa-bus" aria-hidden="true"></i>
             </div>
-            <div class="map-labels__description">Veículo não monitorado ou viagem não iniciada.</div>
+            <div class="map-labels__description">Veículo não transmitindo ou viagem não iniciada.</div>
             <div>
             </div>
         </div>
